fixed img url not being saved due to mismatched name and get, removed style that made image too big

--- a/src/app/posts/[postID]/post.module.css
+++ b/src/app/posts/[postID]/post.module.css
@@ -7,7 +7,6 @@
   margin-bottom: 1vh;
 }
 .postImage {
-  width: 80%;
   margin-bottom: 1vh;
 }
 .postContent {
